Minimal backend changes, to allow adding products, mainly frontend changes.